--- a/src/app/comp/brackets/b-pool-editor/b-pool-editor.component.html
+++ b/src/app/comp/brackets/b-pool-editor/b-pool-editor.component.html
@@ -1,1 +1,7 @@
-<p>b-pool-editor works!</p>
+<p style="color:red">
+    Bracket serv no será público en la versión final,
+    no se te olvide crear las variables que necesites en el componente.
+    También valida el selector de pools antes de que pases a esta página
+</p>
+<pre>{{bracketServ.dataLoad|json}}</pre>
+<!-- Bracket serv no será público en la versión final no se te olvide crear las variables que necesites en el componente -->
