--- a/src/app/comp/brackets/brackets-start/brackets-start.component.html
+++ b/src/app/comp/brackets/brackets-start/brackets-start.component.html
@@ -1,40 +1,37 @@
 <!--
   File name: Bracket start (Main view)
   Creation Date: 01/27/2025
-  Last Modified: 01-28-2025
+  Last Modified: 01-29-2025
   Created by: Samuel
   Modified by: Samuel
 -->
 <div class="container">
-    <div class="header">
-        <div class="rowHeader">
-            <div class="col">
-                <img class="userImage" [src]="$event.eventLogo" height="47px" />
-            </div>
-            <div class="col">
-                <div class="header">
-                    <h2>Edit Events</h2>
-                    <h3>Event name: {{ $event.eventName }}</h3>
-                </div>
-            </div>
-            <div class="col">
-                <img src="https://firebasestorage.googleapis.com/v0/b/astrohoopz-6b201.appspot.com/o/eventLogos%2FTPnWouwg61Fv4xaR5m1L.png?alt=media&amp;token=01c30c7f-317e-422e-9aed-ef34a7b7ce5f"
-                    height="47px" />
-            </div>
+    @if($user!=undefined){
+    <div class="rootPageHeader rootFlexSbC">
+        <div class="imgCont bgW rootFlexCC mat-elevation-z3">
+            <img [src]="$user|userImage|async">
+        </div>
+        <h3 *ngIf="$event!=undefined">{{ $event.eventName }}</h3>
+        <div class="imgCont bgW rootFlexCC mat-elevation-z3">
+            <img src="./assets/AstroMiniLogo.png" height="47px">
         </div>
     </div>
+    }
+    @if($event!=undefined){
     <div class="options">
         <div class="rowOptions">
+
             <div class="colTeamInfo">
-                <label for="teamRegisterLabel">Team Register: {{ $registeredTeams.length }}
+                <label *ngIf="$registeredTeamUnits.length!=undefined" for="teamRegisterLabel">Team Register: {{
+                    $registeredTeamUnits.length }}
                 </label>
                 <br />
-                <label for="teamInteresteLabel">Interested teams: {{ $intrestedTeams.length }}
+                <label for="teamInteresteLabel">Interested teams: {{ $intrestedTeamUnits.length }}
                 </label>
                 <br />
                 <br />
                 <div>
-                    <button mat-fab extended class="contactButton" (click)="openDialog($intrestedTeams)">
+                    <button mat-fab extended class="contactButton" (click)="openDialog($intrestedTeamUnits)">
                         <mat-icon>message</mat-icon> Contact with the interested teams
                     </button>
                 </div>
@@ -44,92 +41,132 @@
                     src="https://firebasestorage.googleapis.com/v0/b/astrohoopz-6b201.appspot.com/o/eventLogos%2FTPnWouwg61Fv4xaR5m1L.png?alt=media&amp;token=01c30c7f-317e-422e-9aed-ef34a7b7ce5f" />
             </div>
             <div class="colDivisions">
-                <mat-form-field appearance="fill" class="combo-box">
-                    <mat-label>Category</mat-label>
+                <h3>Division selected</h3>
+                <mat-form-field appearance="fill" class="comboBox">
+                    <mat-label>Divisions</mat-label>
                     <select [(ngModel)]="selectedDivision" (change)="onSelectionChange(selectedDivision)"
                         matNativeControl required>
+                        <option disabled selected>--Select a division--</option>
                         @for (category of $event.eventCategories; track $index) {
-                        <option [value]="category.code">{{category.category}}/{{category.gender}}</option>
+                        <option [value]="category.code">
+                            {{ category.category }}/{{ category.gender }}
+                        </option>
                         }
                     </select>
                 </mat-form-field>
-                <p>{{selectedDivision}}</p>
             </div>
         </div>
     </div>
     <div class="bracketsList">
-        <mat-card class="example-card">
+        <mat-card class="exampleCard">
             <mat-card-header>
                 <mat-card-title>Round Robin</mat-card-title>
-                <mat-card-subtitle>In a Round Robin tournament, every team plays against every other
-                    team at least once. The team with the most wins or points at the end
-                    is declared the winner. This system ensures fairness, as every team
-                    has the chance to compete with all the others.</mat-card-subtitle>
+                <mat-card-subtitle class="subtitleWidth">Each team or player competes against every other participant at
+                    least
+                    once. The ranking is determined by the total wins, points, or other
+                    criteria. It ensures that every participant gets multiple
+                    games.</mat-card-subtitle>
             </mat-card-header>
             <mat-card-content class="cardContent">
-                <div class="card-image">
+                <div class="cardImage">
                     <img src="https://firebasestorage.googleapis.com/v0/b/astrohoopz-6b201.appspot.com/o/eventLogos%2FTPnWouwg61Fv4xaR5m1L.png?alt=media&amp;token=01c30c7f-317e-422e-9aed-ef34a7b7ce5f"
-                        class="image-right" />
+                        class="image-right" alt="Image Bracket" />
                 </div>
                 <div class="card-button">
-                    <button mat-raised-button color="primary">Click Me</button>
+                    <button mat-fab extended class="contactButton"
+                        (click)="openPreviewDialog($event, $registeredTeamUnits)">
+                        <mat-icon>add_circle</mat-icon> Create
+                    </button>
                 </div>
             </mat-card-content>
         </mat-card>
-        <mat-card class="example-card">
+        <mat-card class="exampleCard">
             <mat-card-header>
-                <mat-card-title>Round Robin</mat-card-title>
-                <mat-card-subtitle>In a Round Robin tournament, every team plays against every other
-                    team at least once. The team with the most wins or points at the end
-                    is declared the winner. This system ensures fairness, as every team
-                    has the chance to compete with all the others.</mat-card-subtitle>
+                <mat-card-title>Pool Games</mat-card-title>
+                <mat-card-subtitle class="subtitleWidth">Participants are divided into small groups (pools), where they
+                    play
+                    against each other in a mini-league format. The top teams or players
+                    from each pool advance to the next stage, usually an elimination
+                    bracket.</mat-card-subtitle>
             </mat-card-header>
             <mat-card-content class="cardContent">
-                <div class="card-image">
+                <div class="cardImage">
                     <img src="https://firebasestorage.googleapis.com/v0/b/astrohoopz-6b201.appspot.com/o/eventLogos%2FTPnWouwg61Fv4xaR5m1L.png?alt=media&amp;token=01c30c7f-317e-422e-9aed-ef34a7b7ce5f"
-                        class="image-right" />
+                        alt="Image Bracket" class="imageRight" />
                 </div>
-                <div class="card-button">
-                    <button mat-raised-button color="primary">Click Me</button>
+                <div class="cardButton">
+                    <button mat-fab extended class="contactButton"
+                        (click)="openPreviewDialog($event, $registeredTeamUnits)">
+                        <mat-icon>add_circle</mat-icon> Create
+                    </button>
                 </div>
             </mat-card-content>
         </mat-card>
-        <mat-card class="example-card">
+        <mat-card class="exampleCard">
             <mat-card-header>
-                <mat-card-title>Round Robin</mat-card-title>
-                <mat-card-subtitle>In a Round Robin tournament, every team plays against every other
-                    team at least once. The team with the most wins or points at the end
-                    is declared the winner. This system ensures fairness, as every team
-                    has the chance to compete with all the others.</mat-card-subtitle>
+                <mat-card-title>Single Elimination</mat-card-title>
+                <mat-card-subtitle class="subtitleWidth">
+                    A knockout format where a team or player is eliminated after losing
+                    once. The winner moves on to the next round until only one remains as
+                    the champion.</mat-card-subtitle>
             </mat-card-header>
             <mat-card-content class="cardContent">
-                <div class="card-image">
+                <div class="cardImage">
                     <img src="https://firebasestorage.googleapis.com/v0/b/astrohoopz-6b201.appspot.com/o/eventLogos%2FTPnWouwg61Fv4xaR5m1L.png?alt=media&amp;token=01c30c7f-317e-422e-9aed-ef34a7b7ce5f"
-                        class="image-right" />
+                        alt="Image Bracket" class="image-right" />
                 </div>
-                <div class="card-button">
-                    <button mat-raised-button color="primary">Click Me</button>
+                <div class="cardButton">
+                    <button mat-fab extended class="contactButton"
+                        (click)="openPreviewDialog($event, $registeredTeamUnits)">
+                        <mat-icon>add_circle</mat-icon> Create
+                    </button>
                 </div>
             </mat-card-content>
         </mat-card>
-        <mat-card class="example-card">
+        <mat-card class="exampleCard">
             <mat-card-header>
-                <mat-card-title>Round Robin</mat-card-title>
-                <mat-card-subtitle>In a Round Robin tournament, every team plays against every other
-                    team at least once. The team with the most wins or points at the end
-                    is declared the winner. This system ensures fairness, as every team
-                    has the chance to compete with all the others.</mat-card-subtitle>
+                <mat-card-title>Pool + Single Elimination</mat-card-title>
+                <mat-card-subtitle class="subtitleWidth">Combines pool play and a single-elimination bracket.
+                    Participants
+                    first compete in pool games, and the best performers advance to a
+                    single-elimination knockout stage.</mat-card-subtitle>
             </mat-card-header>
             <mat-card-content class="cardContent">
-                <div class="card-image">
+
+                <div class="cardImage">
                     <img src="https://firebasestorage.googleapis.com/v0/b/astrohoopz-6b201.appspot.com/o/eventLogos%2FTPnWouwg61Fv4xaR5m1L.png?alt=media&amp;token=01c30c7f-317e-422e-9aed-ef34a7b7ce5f"
-                        class="image-right" />
+                        alt="Image Bracket" class="image-right" />
                 </div>
-                <div class="card-button">
-                    <button mat-raised-button color="primary">Click Me</button>
+                <div class="cardButton">
+                    <button mat-fab extended class="contactButton"
+                        (click)="openPreviewDialog($event, $registeredTeamUnits)">
+                        <mat-icon>add_circle</mat-icon> Create
+                    </button>
+                </div>
+            </mat-card-content>
+        </mat-card>
+        <mat-card class="exampleCard">
+            <mat-card-header>
+                <mat-card-title>Pool + Double Elimination</mat-card-title>
+                <mat-card-subtitle class="subtitleWidth">Similar to pool + single elimination, but instead of a
+                    single-elimination bracket, a double-elimination format is used. This
+                    means a participant must lose twice to be eliminated, providing a
+                    second chance.</mat-card-subtitle>
+            </mat-card-header>
+            <mat-card-content class="cardContent">
+                <div class="cardImage">
+                    <img src="https://firebasestorage.googleapis.com/v0/b/astrohoopz-6b201.appspot.com/o/eventLogos%2FTPnWouwg61Fv4xaR5m1L.png?alt=media&amp;token=01c30c7f-317e-422e-9aed-ef34a7b7ce5f"
+                        alt="Image Bracket" class="image-right" />
+                </div>
+                <div class="cardButton">
+                    <button mat-fab extended class="contactButton"
+                        (click)="openPreviewDialog($event, $registeredTeamUnits)">
+                        <mat-icon>add_circle</mat-icon> Create
+                    </button>
                 </div>
             </mat-card-content>
         </mat-card>
     </div>
     <br />
+    }
 </div>
