--- a/src/app/comp/home/home.component.html
+++ b/src/app/comp/home/home.component.html
@@ -1,2 +1,3 @@
 <p>This component is only rendered to add an eventId to the Url</p>
 <button mat-raised-button (click)="go()" color="primary">Open bracket editor</button>
+<button mat-raised-button (click)="edgar()" color="primary">Edgar</button>
