--- a/src/app/comp/home/home.component.html
+++ b/src/app/comp/home/home.component.html
@@ -1,3 +1,6 @@
+<div class="rootFlexCC rootFlexCol">
 <p>This component is only rendered to add an eventId to the Url</p>
-<button mat-raised-button (click)="go()" color="primary">Open bracket editor</button>
-<button mat-raised-button (click)="edgar()" color="primary">Edgar</button>
+    <button mat-raised-button (click)="samuelS()" color="primary">Samuel Suárez</button>
+    <button mat-raised-button (click)="edgarB()" color="primary">Edgar Barajas</button>
+    <button mat-raised-button (click)="samuelG()" color="primary">Samuel Gómez</button>
+</div>
